[gd_scene load_steps=25 format=2]

[ext_resource path="res://Areas/Park/Park_Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Left.png" type="Texture" id=2]
[ext_resource path="res://Assets/Forward-Movement.png" type="Texture" id=3]
[ext_resource path="res://Assets/Right.png" type="Texture" id=4]
[ext_resource path="res://Assets/Back.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "downIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 7 ), SubResource( 10 ), SubResource( 9 ) ],
"loop": true,
"name": "downWalk",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "leftIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 11 ), SubResource( 14 ), SubResource( 13 ) ],
"loop": true,
"name": "leftWalk",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "rightIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 15 ), SubResource( 18 ), SubResource( 17 ) ],
"loop": true,
"name": "rightWalk",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "upIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 3 ), SubResource( 6 ), SubResource( 5 ) ],
"loop": true,
"name": "upWalk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47.5005, 35.7143 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
animation = "upIdle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 7 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="PlayerArea" type="Area2D" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 0.199998, 0.28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( -2.50003, 10.7143 )
shape = SubResource( 2 )

[connection signal="area_entered" from="PlayerArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_PlayerArea_area_exited"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_PlayerArea_body_entered"]
